Trying to fix the spacing inconsistency on the header.

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ div.error {
 #header h2 {
 	font-size: 16px;
 	color: #444;
-	margin-bottom: 4px;
+	margin: 0 0 4px;
 	font-weight: 400;
 }
 .navEl {
